Bug 133352 - Undo not working properly, blocking formatting of table cell
Summary: Undo not working properly, blocking formatting of table cell
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.2.0.4 release
Hardware: All All
: medium minor
Assignee: Oliver Specht (CIB)
URL:
Whiteboard: target:25.8.0
Keywords: bibisected, bisected
Depends on:
Blocks: Undo-Redo
  Show dependency treegraph
 
Reported: 2020-05-24 15:54 UTC by Telesto
Modified: 2025-03-31 19:04 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2020-05-24 15:54:34 UTC
Description:
Undo not working properly, blocking formatting of table cell

Steps to Reproduce:
1. Open Writer
2. Insert a table
3. Right click cell A1 (left top) -> Table Properties -> Background
4. Cell cell & enable color -> Pick one
5. Press OK
6. Undo
7. Table -> Autoformat Styles -> Box list Blue

Actual Results:
A1 will be empty not formatted

Expected Results:
Should be formatted too


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.0.0.0.alpha1+ (x64)
Build ID: b587de60d4e6aa96238766272d94f1499b22f696
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win; 
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL

and in
5.2
Comment 1 Telesto 2020-05-24 15:55:30 UTC
Bisected to
author	Oliver Specht <oliver.specht@cib.de>	2016-01-12 13:05:56 +0100
committer	Oliver Specht <oliver.specht@cib.de>	2016-01-13 06:56:18 +0000
commit 70d2673ba06878ee84c99d7877e4b71749ac06f0 (patch)
tree 14a0b9dd8de3260ba0a0fa34a2086e6f38ba71b4
parent 8bd9eb833444810dec3debd0215bd26dffc2fb91 (diff)
tdf#96067: fix crash in undo of table row insertion
create SwIterator with SwLayoutFrame instead of SwTabFrame
the wrong usage worked with tools/rtti because of incomplete
type information above of SwLayoutFrame

Note: previously there was no distinction between undo of table cell color & undo of the table..
Comment 2 Telesto 2020-05-24 15:56:13 UTC
 ~/bibisect-win32-5.2
$ git bisect log
# bad: [86cb9d229718f48f9538032b80037238ea79e8a5] source 78223678b7513ffe46804cb08f2dc5bc899b2bab
# good: [1f670510f08cb800cbae2a1dd6ea70d3542e4721] source 49c2b9808df8a6b197dec666dfc0cda6321a4306
git bisect start 'origin/master' 'oldest'
# bad: [3f9909c4c2ada7a3c705eba0e7ff39f96fb4dcae] source b08e200c3dfa964f257c8b7719ef9c801fb107d7
git bisect bad 3f9909c4c2ada7a3c705eba0e7ff39f96fb4dcae
# bad: [73b30cd08e6a8875e5948ffe1f468c343d48d423] source 7cca8d3b3f5a9eda0060342fd2576d08a874b1c3
git bisect bad 73b30cd08e6a8875e5948ffe1f468c343d48d423
# good: [c9c76d38b1ac66a9b3dca62e6d7b049cd916eba2] source 9d1ee5a5b4730a6d3da4e8a02a08d1d27e9d27e4
git bisect good c9c76d38b1ac66a9b3dca62e6d7b049cd916eba2
# good: [f5a2738b479b2df354551fb1c29eda034e1a79b3] source da952d821dcc08b017bdef8f7b06f60befd2effa
git bisect good f5a2738b479b2df354551fb1c29eda034e1a79b3
# good: [d512603a6f111ba05b7985ce2074573881e8d563] source 16c7f8916661df24f4681ec82f6bd4d7ad85d141
git bisect good d512603a6f111ba05b7985ce2074573881e8d563
# bad: [5a9bd8163c2157ca2beca108d62f86521f7bd5c3] source 8ac02b48579c18c1f3c394ea1ae8eb76262eb1e7
git bisect bad 5a9bd8163c2157ca2beca108d62f86521f7bd5c3
# bad: [2248dc7b6b731fa548a60226aef6d181aace8080] source d0e1cb02d87968bdfd6bbedecf41cd5a6ed1c644
git bisect bad 2248dc7b6b731fa548a60226aef6d181aace8080
# bad: [7ba0ce2d54f6cacbbe754bc176198c5a37eb5d87] source 88ee54654e95f1f62266ee2737d2b82c8d5080a6
git bisect bad 7ba0ce2d54f6cacbbe754bc176198c5a37eb5d87
# good: [3e8e08c01b9fbc862de9403911745286b9f1c3d1] source 8bd9eb833444810dec3debd0215bd26dffc2fb91
git bisect good 3e8e08c01b9fbc862de9403911745286b9f1c3d1
# bad: [ee5ed91776163293df2bb88d5fb5653bd21386fb] source 200434b1419afe375e104da76c68f81253374645
git bisect bad ee5ed91776163293df2bb88d5fb5653bd21386fb
# bad: [36e32412a62195a76683e3ce747e10dff42aad8a] source 13ca560d136e833efabef843c57771c96d865964
git bisect bad 36e32412a62195a76683e3ce747e10dff42aad8a
# bad: [601dd0a47d25a28d2a5acadf6586c41c1c577a8c] source b497655a48f75ef377ac7428ef64bcb3c7bf51e4
git bisect bad 601dd0a47d25a28d2a5acadf6586c41c1c577a8c
# bad: [e9f8080af2558a4d54787644bd669ee009d09d7a] source 70d2673ba06878ee84c99d7877e4b71749ac06f0
git bisect bad e9f8080af2558a4d54787644bd669ee009d09d7a
# first bad commit: [e9f8080af2558a4d54787644bd669ee009d09d7a] source 70d2673ba06878ee84c99d7877e4b71749ac06f0
Comment 3 Telesto 2020-05-24 15:56:43 UTC
Adding CC to Oliver Specht
Comment 4 Buovjaga 2020-09-04 16:32:18 UTC
Repro

Arch Linux 64-bit
Version: 7.1.0.0.alpha0+
Build ID: 6b2eff7d69c6e14d89dd33eaa58c01d82c541266
CPU threads: 8; OS: Linux 5.8; UI render: default; VCL: kf5
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Built on 4 September 2020
Comment 5 QA Administrators 2022-09-05 03:36:53 UTC Comment hidden (obsolete)
Comment 6 QA Administrators 2024-09-05 03:17:09 UTC Comment hidden (obsolete)
Comment 7 Commit Notification 2025-03-27 23:42:51 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a22f83249699b41317f2d6923878c369e0344598

tdf#133352 Undo HasDirectFormatting flag of table box

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.