tdf#133352 Undo HasDirectFormatting flag of table box

With 09fc6fef2d03ca8558dd6f0eec45d61ceb282cb5 a mbDirectFormatting flag
has been added to table boxes. This is now also restored in undo.

Change-Id: I3b8c22c0c452be3dd4b2f203a0ac5b9fdc7488d9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183366
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>
Tested-by: Thorsten Behrens <thorsten.behrens@allotropia.de>